# AoC_2025

./: pyproject.toml
Day_01/: 01_SecretEntrance_1.py  01_SecretEntrance_2.py
Day_02/: 02_GiftShop_1.py  02_GiftShop_2.py
Day_03/: 03_Lobby_1.py  03_Lobby_2.py
Day_04/: 04_PrintingDepartment_1.py  04_PrintingDepartment_2.py
Day_05/: 05_Cafeteria_1.py  05_Cafeteria_2.py
Day_06/: 06_TrashCompactor_1.py  06_TrashCompactor_2.py
Day_07/: 07_Laboratories_1.py  07_Laboratories_2.py
Day_08/: 08_Playground_1.py  08_Playground_2.py
Day_09/: 09_MovieTheater_1.py  09_MovieTheater_2.py
Day_10/: 10_Factory_1.py
Day_11/: 11_Reactor_1.py  11_Reactor_2.py
